feat(config): implement comprehensive game configuration system and commands
Introduces a new `/tmm:config` command for server operators to view, reload, and reset game configurations at runtime.
Migrates numerous hardcoded game values (shop prices, item cooldowns, passive money, psycho mode, blackout durations) to the `MidnightConfig` system, making them fully configurable.
Refactors existing commands to provide detailed, localized feedback messages to players.
Adds a new item tag `psychosis_items` for data-driven psychosis item pools.
Ensures config initialization and reloading are handled correctly across server and client.